remise invoice_doc + chgt label et OF

--- a/safar_module/views/report_label_etiquette.xml
+++ b/safar_module/views/report_label_etiquette.xml
@@ -74,7 +74,7 @@
                         </t>
                         <br/>
                         <!--ligne 6-->
-                        <u>Groupe SAFAR</u> - <u>Made in France</u>
+                        <u>Made in France</u>
 <!--                    </th>-->
 <!--                  </tr>-->
 <!--              </table>-->
